# driftcheck

./: .pre-commit-hooks.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml  docguard-action.yml  driftcheck-action.yml  homebrew.yml  release.yml
src/: analyzer.rs  cache.rs  cli.rs  config.rs  error.rs  fix.rs  git.rs  llm.rs  main.rs  output.rs  progress.rs  search.rs
src/tui/: app.rs  mod.rs  theme.rs
